Made structural changes for create test module and test conduct module.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-end/test-end.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-end/test-end.html
@@ -1,5 +1,9 @@
-﻿<div class="content-block end-test">
-    <h1>Your test is over.</h1>
-    <h5>Thank you for attending the test.</h5>
-    <button type="button" class="btn">Close</button>
+﻿<div class="test-conduct">
+    <test-conduct-header></test-conduct-header>
+    <div class="content-block end-test">
+        <h1>Your test is over.</h1>
+        <h5>Thank you for attending the test.</h5>
+        <button type="button" class="btn">Close</button>
+    </div>
+    <test-conduct-footer></test-conduct-footer>
 </div>
