--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test-summary/test-summary.html
@@ -1,23 +1,27 @@
-﻿<div class="content-block">
-    <h2 class="mb40">Test Summary</h2>
-    <p class="test-info"><span class="h4">Time Left: </span><span class="h2">00:17:22</span></p>
-    <p class="test-info"><span class="h4">Total Questions: </span><span class="h2">100</span></p>
-    <p class="test-info"><span class="h4">Attempt Summary: </span></p>
-    <table>
-        <tr>
-            <th class="h5">Attempted Questions</th>
-            <th class="h5">Not Attempted Questions</th>
-            <th class="h5">Questions Marked for Review</th>
-        </tr>
-        <tr>
-            <td class="h2 theme-text">70</td>
-            <td class="h2">12</td>
-            <td class="h2 yellow-text">18</td>
-        </tr>
-    </table>
-    <div class="text-center">
-        <h5 class="ptb20">Test once ended, cannot be resumed. Are you sure, you want to end your test?</h5>
-        <button type="button" class="btn">Back to Test</button>
-        <button type="button" class="btn btn-primary">End Test</button>
+﻿<div class="test-conduct">
+    <test-conduct-header></test-conduct-header>
+    <div class="content-block">
+        <h2 class="mb40">Test Summary</h2>
+        <p class="test-info"><span class="h4">Time Left: </span><span class="h2">00:17:22</span></p>
+        <p class="test-info"><span class="h4">Total Questions: </span><span class="h2">100</span></p>
+        <p class="test-info"><span class="h4">Attempt Summary: </span></p>
+        <table>
+            <tr>
+                <th class="h5">Attempted Questions</th>
+                <th class="h5">Not Attempted Questions</th>
+                <th class="h5">Questions Marked for Review</th>
+            </tr>
+            <tr>
+                <td class="h2 theme-text">70</td>
+                <td class="h2">12</td>
+                <td class="h2 yellow-text">18</td>
+            </tr>
+        </table>
+        <div class="text-center">
+            <h5 class="ptb20">Test once ended, cannot be resumed. Are you sure, you want to end your test?</h5>
+            <button type="button" class="btn">Back to Test</button>
+            <button type="button" class="btn btn-primary">End Test</button>
+        </div>
     </div>
+    <test-conduct-footer></test-conduct-footer>
 </div>
