--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/register/register.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/register/register.html
@@ -1,33 +1,37 @@
-﻿<div class="registration-block">
-    <form>
-        <h2>Registration Form</h2>
-        <div class="form-group">
-            <label class="h4">First Name</label>
-            <input type="text" class="form-control" />
-            <div class="errors-container"></div>
-        </div>
-        <div class="form-group">
-            <label class="h4">Last Name</label>
-            <input type="text" class="form-control" />
-            <div class="errors-container"></div>
-        </div>
-        <div class="form-group">
-            <label class="h4">Email</label>
-            <input type="email" class="form-control" />
-            <div class="errors-container"></div>
-        </div>
-        <div class="form-group">
-            <label class="h4">Roll Number</label>
-            <input type="text" class="form-control" />
-            <div class="errors-container"></div>
-        </div>
-        <div class="form-group">
-            <label class="h4">Contact Number</label>
-            <input type="text" class="form-control" />
-            <div class="errors-container"></div>
-        </div>
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </div>
-    </form>
+﻿<div class="test-conduct">
+    <test-conduct-header></test-conduct-header>
+    <div class="registration-block">
+        <form>
+            <h2>Registration Form</h2>
+            <div class="form-group">
+                <label class="h4">First Name</label>
+                <input type="text" class="form-control" />
+                <div class="errors-container"></div>
+            </div>
+            <div class="form-group">
+                <label class="h4">Last Name</label>
+                <input type="text" class="form-control" />
+                <div class="errors-container"></div>
+            </div>
+            <div class="form-group">
+                <label class="h4">Email</label>
+                <input type="email" class="form-control" />
+                <div class="errors-container"></div>
+            </div>
+            <div class="form-group">
+                <label class="h4">Roll Number</label>
+                <input type="text" class="form-control" />
+                <div class="errors-container"></div>
+            </div>
+            <div class="form-group">
+                <label class="h4">Contact Number</label>
+                <input type="text" class="form-control" />
+                <div class="errors-container"></div>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary">Submit</button>
+            </div>
+        </form>
+    </div>
+    <test-conduct-footer></test-conduct-footer>
 </div>
