--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -1,94 +1,72 @@
 ﻿<div class="test-create-steps test-sections">
-  <div class="header-block">
+    <create-test-header></create-test-header>
     <div class="container">
-      <h1>
-        <span [hidden]="editName">BBIT 10-08-2017</span>
-        <input type="text" class="form-control" [hidden]="!editName" />
-        <em class="material-icons" (click)="editName = !editName">edit</em>
-      </h1>
+        <h2>Select sections to add in your test</h2>
+        <ul class="sections-list">
+            <li>
+                <label for="section1">
+                    <input type="checkbox" id="section1" />
+                    <span class="section-box clearfix">
+                        <span class="h4 pull-left">English Communication</span>
+                        <em class="material-icons pull-right">check</em>
+                    </span>
+                </label>
+            </li>
+            <li>
+                <label for="section2">
+                    <input type="checkbox" id="section2" />
+                    <span class="section-box clearfix">
+                        <span class="h4 pull-left">Logical Reasoning & Data Interpretation</span>
+                        <em class="material-icons pull-right">check</em>
+                    </span>
+                </label>
+            </li>
+            <li>
+                <label for="section3">
+                    <input type="checkbox" id="section3" />
+                    <span class="section-box clearfix">
+                        <span class="h4 pull-left">Quantitative Ability</span>
+                        <em class="material-icons pull-right">check</em>
+                    </span>
+                </label>
+            </li>
+            <li>
+                <label for="section4">
+                    <input type="checkbox" id="section4" />
+                    <span class="section-box clearfix">
+                        <span class="h4 pull-left">Programming</span>
+                        <em class="material-icons pull-right">check</em>
+                    </span>
+                </label>
+            </li>
+            <li>
+                <label for="section5">
+                    <input type="checkbox" id="section5" />
+                    <span class="section-box clearfix">
+                        <span class="h4 pull-left">English Writing</span>
+                        <em class="material-icons pull-right">check</em>
+                    </span>
+                </label>
+            </li>
+            <li>
+                <label for="section6">
+                    <input type="checkbox" id="section6" />
+                    <span class="section-box clearfix">
+                        <span class="h4 pull-left">General Awareness</span>
+                        <em class="material-icons pull-right">check</em>
+                    </span>
+                </label>
+            </li>
+            <li>
+                <label for="section7">
+                    <input type="checkbox" id="section7" />
+                    <span class="section-box clearfix">
+                        <span class="h4 pull-left">Physics</span>
+                        <em class="material-icons pull-right">check</em>
+                    </span>
+                </label>
+            </li>
+        </ul>
     </div>
-  </div>
-  <div class="container">
-    <h2>Select sections to add in your test</h2>
-    <ul class="sections-list">
-      <li>
-        <label for="section1">
-          <input type="checkbox" id="section1" />
-          <span class="section-box clearfix">
-            <span class="h4 pull-left">English Communication</span>
-            <em class="material-icons pull-right">check</em>
-          </span>
-        </label>
-      </li>
-      <li>
-        <label for="section2">
-          <input type="checkbox" id="section2" />
-          <span class="section-box clearfix">
-            <span class="h4 pull-left">Logical Reasoning & Data Interpretation</span>
-            <em class="material-icons pull-right">check</em>
-          </span>
-        </label>
-      </li>
-      <li>
-        <label for="section3">
-          <input type="checkbox" id="section3" />
-          <span class="section-box clearfix">
-            <span class="h4 pull-left">Quantitative Ability</span>
-            <em class="material-icons pull-right">check</em>
-          </span>
-        </label>
-      </li>
-      <li>
-        <label for="section4">
-          <input type="checkbox" id="section4" />
-          <span class="section-box clearfix">
-            <span class="h4 pull-left">Programming</span>
-            <em class="material-icons pull-right">check</em>
-          </span>
-        </label>
-      </li>
-      <li>
-        <label for="section5">
-          <input type="checkbox" id="section5" />
-          <span class="section-box clearfix">
-            <span class="h4 pull-left">English Writing</span>
-            <em class="material-icons pull-right">check</em>
-          </span>
-        </label>
-      </li>
-      <li>
-        <label for="section6">
-          <input type="checkbox" id="section6" />
-          <span class="section-box clearfix">
-            <span class="h4 pull-left">General Awareness</span>
-            <em class="material-icons pull-right">check</em>
-          </span>
-        </label>
-      </li>
-      <li>
-        <label for="section7">
-          <input type="checkbox" id="section7" />
-          <span class="section-box clearfix">
-            <span class="h4 pull-left">Physics</span>
-            <em class="material-icons pull-right">check</em>
-          </span>
-        </label>
-      </li>
-    </ul>
-  </div>
-  <div class="footer-block clearfix">
-    <div class="container">
-      <ul class="steps pull-left">
-        <li class="h5 active"><a [routerLink]="['/tests/sections']">Select Sections</a></li>
-        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
-        <li class="h5"><a [routerLink]="['/tests/questions']">Select Questions</a></li>
-        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
-        <li class="h5"><a [routerLink]="['/tests/settings']">Settings & Schedule</a></li>
-      </ul>
-      <div class="buttons-block pull-right">
-        <button type="button" class="btn" [routerLink]="['/tests']">Save & Exit</button>
-        <button type="button" class="btn btn-primary">Save & Next</button>
-      </div>
-    </div>
-  </div>
+    <create-test-footer></create-test-footer>
 </div>
