duplicate test code
added unit testing

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/duplicate-test-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/duplicate-test-dialog.html
@@ -6,7 +6,12 @@
     <md-dialog-content>
         <div class="form-group">
             <label class="h4">Test Name</label>
-            <input type="text" name="name" class="form-control" [(ngModel)]="testName" />
+            <input type="text" name="name" class="form-control" [(ngModel)]="testName" #name="ngModel" require maxlength="150" pattern="^[a-zA-Z0-9_@ ]*$" (ngModelChange)="onErrorChange()"/>
+            <div class="errors-container">
+                <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.required">Name is required</span>
+                <span class="error-msg" *ngIf="name.touched && !name.valid && name.errors.pattern">Test name should be alphanumeric. Allowed special characters are @, _ and white space</span>
+                <span class="error-msg" *ngIf="error">Test with this name already exists</span>
+            </div>
         </div>
     </md-dialog-content>
     <md-dialog-actions>
