--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -73,14 +73,14 @@
                 <div class="form-group">
                     <label class="h4">Test Case(s)</label>
                     <br />
-                    <button type="button" class="btn btn-primary" [hidden]="formControlModel.showTestCase" (click)="formControlModel.showTestCase=true">Add Test Case</button>
-                    <md2-accordion>
+                    <button type="button" class="btn btn-primary" [hidden]="formControlModel.showTestCase" (click)="formControlModel.showTestCase=true;addTestCases()">Add Test Case</button>
+                    <md2-accordion *ngFor="let testCase of testCases">
                         <md2-accordion-tab class="collapsible-block" [hidden]="!formControlModel.showTestCase">
                             <md2-accordion-header class="collapsible-header clearfix">
                                 <div class="title-info h2 pull-left">
-                                    <span>Type: Basic</span>
-                                    <span>Title: </span>
-                                    <span>Weightage: 0</span>
+                                    <span>Type:{{TestCaseType[testCase.testCaseType]}}</span>
+                                    <span>Title:{{testCase.testCaseTitle}}</span>
+                                    <span>Weightage: {{testCase.testCaseMarks}}</span>
                                 </div>
                                 <div class="pull-right">
                                     <span class="delete-option h7"><em class="material-icons">delete</em> <span>Delete</span></span>
@@ -90,98 +90,73 @@
                             <div class="collapsible-body">
                                 <div class="form-group">
                                     <label>Test Case Title</label>
-                                    <input type="text" class="form-control width-percent-60" />
-                                    <div class="errors-container"></div>
+                                    <input type="text" [(ngModel)]="testCase.testCaseTitle" class="form-control width-percent-60" required name="title" #title="ngModel"/>
+                                    <div class="errors-container">
+                                        <div *ngIf="title.errors && (title.dirty || title.touched)">
+                                            <p class="text-danger">Test Case Title is required</p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Description</label>
-                                    <textarea class="form-control width-percent-60" rows="3"></textarea>
-                                    <div class="errors-container"></div>
+                                    <textarea  [(ngModel)]="testCase.testCaseDescription" class="form-control width-percent-60" rows="3" required name="description" #description="ngModel"></textarea>
+                                    <div class="errors-container">
+                                        <div *ngIf="description.errors && (description.dirty || description.touched)">
+                                            <p class="text-danger">Test Case Description is required</p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Type</label>
-                                    <select class="form-control width-percent-60">
-                                        <option>Select Option</option>
-                                        <option>Option 1</option>
-                                        <option>Option 2</option>
-                                        <option>Option 3</option>
+                                    <select class="form-control width-percent-60" (change)="testCase.testCaseType=$event.target.value"  ngModel required name="type" #type="ngModel">
+                                        <option [disabled]="type.dirty" selected value="">Select Option</option>
+                                        <option>Default</option>
+                                        <option>Basic</option>
+                                        <option>Necessary</option>
+                                        <option>Corner</option>
                                     </select>
-                                    <div class="errors-container"></div>
+                                    <div class="errors-container">
+                                        <div *ngIf="type.errors && (type.dirty || type.touched)">
+                                            <p class="text-danger">Test Case Type is required</p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Marks</label>
-                                    <input type="text" class="form-control width-percent-60" placeholder="0" />
-                                    <div class="errors-container"></div>
+                                    <input type="text" [(ngModel)]="testCase.testCaseMarks" class="form-control width-percent-60" placeholder="0" required name="marks" #marks="ngModel"/>
+                                    <div class="errors-container">
+                                        <div *ngIf="marks.errors && (marks.dirty || marks.touched)">
+                                            <p class="text-danger">Test Case Marks is required</p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Input Values</label>
-                                    <textarea class="form-control width-percent-60" rows="3"></textarea>
-                                    <div class="errors-container"></div>
+                                    <textarea [(ngModel)]="testCase.testCaseInput" class="form-control width-percent-60" rows="3" required name="input" #input="ngModel"></textarea>
+                                    <div class="errors-container">
+                                        <div *ngIf="input.errors && (input.dirty || input.touched)">
+                                            <p class="text-danger">Test Case Input is required</p>
+                                        </div>
+                                    </div>
                                 </div>
                                 <div class="form-group">
                                     <label>Test Case Expected Values</label>
-                                    <textarea class="form-control width-percent-60" rows="3"></textarea>
-                                    <div class="errors-container"></div>
-                                </div>
-                            </div>
-                        </md2-accordion-tab>
-                        <md2-accordion-tab class="collapsible-block" [hidden]="!formControlModel.showNewTestCase">
-                            <md2-accordion-header class="collapsible-header clearfix">
-                                <div class="title-info h2 pull-left">
-                                    <span>Type: Basic</span>
-                                    <span>Title: </span>
-                                    <span>Weightage: 0</span>
-                                </div>
-                                <div class="pull-right">
-                                    <span class="delete-option h7"><em class="material-icons">delete</em> <span>Delete</span></span>
-                                    <span class="collapsible-icon"><em class="material-icons add-icon">add</em><em class="material-icons remove-icon">remove</em></span>
-                                </div>
-                            </md2-accordion-header>
-                            <div class="collapsible-body">
-                                <div class="form-group">
-                                    <label>Test Case Title</label>
-                                    <input type="text" class="form-control width-percent-60" />
-                                    <div class="errors-container"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Test Case Description</label>
-                                    <textarea class="form-control width-percent-60" rows="3"></textarea>
-                                    <div class="errors-container"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Test Case Type</label>
-                                    <select class="form-control width-percent-60">
-                                        <option>Select Option</option>
-                                        <option>Option 1</option>
-                                        <option>Option 2</option>
-                                        <option>Option 3</option>
-                                    </select>
-                                    <div class="errors-container"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Test Case Marks</label>
-                                    <input type="text" class="form-control width-percent-60" placeholder="0" />
-                                    <div class="errors-container"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Test Case Input Values</label>
-                                    <textarea class="form-control width-percent-60" rows="3"></textarea>
-                                    <div class="errors-container"></div>
-                                </div>
-                                <div class="form-group">
-                                    <label>Test Case Expected Values</label>
-                                    <textarea class="form-control width-percent-60" rows="3"></textarea>
-                                    <div class="errors-container"></div>
+                                    <textarea [(ngModel)]="testCase.testCaseOutput" class="form-control width-percent-60" rows="3" required name="output" #output="ngModel"></textarea>
+                                    <div class="errors-container">
+                                        <div *ngIf="output.errors && (output.dirty || output.touched)">
+                                            <p class="text-danger">Test Case Output is required</p>
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
                         </md2-accordion-tab>
                     </md2-accordion>
-                    <button type="button" class="add-testcase-btn h2" [hidden]="!formControlModel.showTestCase" (click)="formControlModel.showNewTestCase=true">Add New Test Case</button>
+                    <button type="button" class="add-testcase-btn h2" [hidden]="!formControlModel.showTestCase" (click)="formControlModel.showNewTestCase=true;addTestCases()">Add New Test Case</button>
                 </div>
             </div>
             <div class="actions-area">
                 <button type="button" class="btn" [routerLink]="['/questions']">Cancel</button>
-                <button type="submit" class="btn btn-primary" [disabled]="!codeSnippetForm.valid || nolanguageSelected">Save</button>
+                <button type="submit" class="btn btn-primary" [disabled]="!codeSnippetForm.valid || nolanguageSelected || !testCases.length > 0">Save</button>
             </div>
         </form>
     </div>
