fixed stringto enum issue

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -78,7 +78,7 @@
                         <md2-accordion-tab class="collapsible-block" [hidden]="!formControlModel.showTestCase">
                             <md2-accordion-header class="collapsible-header clearfix">
                                 <div class="title-info h2 pull-left">
-                                    <span>Type:{{TestCaseType[testCase.testCaseType]}}</span>
+                                    <span>Type:{{testCase.testCaseType}}</span>
                                     <span>Title:{{testCase.testCaseTitle}}</span>
                                     <span>Weightage: {{testCase.testCaseMarks}}</span>
                                 </div>
