--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -7,8 +7,8 @@
                 <button type="button" (click)="showSearchInput = !showSearchInput"><em class="material-icons">search</em></button>
             </div>
         </div>
-        <div class="main-block clearfix">
-            <div class="col-md-3 col-sm-4 category-block">
+        <div class="main-block">
+            <div class="category-block">
                 <div class="block-title clearfix">
                     <h2 class="pull-left">Sections</h2>
                     <em class="material-icons pull-right" (click)="addCategoryDialog()">add</em>
@@ -25,7 +25,7 @@
                     </li>
                 </ul>
             </div>
-            <div class="col-md-9 col-sm-8 col-md-offset-3 col-sm-offset-4 questions-block">
+            <div class="questions-block">
                 <div class="block-title">
                     <h2>All Questions</h2>
                 </div>
