Added delete test code
Added comments, formatted the files,added unit testing

Deleted mock Test Attendee model,migration file for mock test atendee model , corrected code related to test attendee model

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/tests-dashboard.html
@@ -23,7 +23,7 @@
                                 <i class="material-icons pull-right" [mdMenuTriggerFor]="testMenu">more_vert</i>
                                 <md-menu #testMenu="mdMenu" [overlapTrigger]="false" x-position="before">
                                     <a md-menu-item>Edit</a>
-                                    <a md-menu-item (click)="deleteTestDialog()">Delete</a>
+                                    <a md-menu-item (click)="deleteTestDialog(test)">Delete</a>
                                     <a md-menu-item>Duplicate</a>
                                     <a md-menu-item [routerLink]="[test.id,'settings']">Settings</a>
                                 </md-menu>
