--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-settings/test-settings.html
@@ -1,131 +1,96 @@
 ﻿<div class="test-create-steps test-settings">
-    <div class="test-create-header clearfix">
-        <div class="container">
-            <h1 class="pull-left">
-                <span class="test-name" [hidden]="editName">{{testSettings.testName}}</span>
-                <input type="text" id="name" #box name="name" class="form-control" placeholder="Ex. Software Developer Recruitment Test"
-                       [(ngModel)]="testSettings.testName" #name="ngModel" required pattern="^[a-zA-Z0-9_@ $#%&_*^{}[\]\|.?-]*$" maxlength="150" (focusout)="editName = !editName"
-                       [hidden]="!editName" (focus)="selectAllContent($event)" (mouseup)="$event.preventDefault()" (blur)="updateTestName(testSettings.id,testSettings)" />
-                <button type="button" class="icon-btn ml10" (click)="editName = !editName"><em class="material-icons">edit</em></button>
-                <span class="update-btns">
-                    <button type="button" class="icon-btn ml10"><em class="material-icons theme-text">check</em></button>
-                    <button type="button" class="icon-btn ml10"><em class="material-icons danger-text">close</em></button>
-                </span>
-                <span class="errors-container">
-                    <span class="error-msg" *ngIf="name.errors && (name.dirty || name.touched)" [hidden]="!name.errors.required">Name is required</span>
-                    <span class="error-msg" *ngIf="name.errors && (name.touched || name.pristine || name.untouched)" [hidden]="!name.errors.pattern">Enter valid Test Name</span>
-                </span>
-            </h1>
-            <button type="button" class="btn btn-primary pull-right"><em class="material-icons">remove_red_eye</em> Preview</button>
-        </div>
-    </div>
+  <form #settingsForm="ngForm">
+    <create-test-header></create-test-header>
     <div class="container">
-        <h5>Settings & Schedule</h5>
-        <form class="form-area">
-            <div class="form-group">
-                <label class="h4">Time Duration (mins)</label>
-                <input type="number" class="form-control small-width" [(ngModel)]="testSettings.duration" name="Duration" placeholder="00" max="180" min="0" />
-                <div class="errors-container"></div>
+      <h5>Settings & Schedule</h5>
+      <div class="form-area">
+        <div class="form-group">
+          <label class="h4">Time Duration (mins)</label>
+          <input type="number" class="form-control small-width" [(ngModel)]="testSettings.duration" name="Duration" placeholder="00" max="180" min="0" (mouseup)="isWarningTimeValid()"/>
+          <div class="errors-container"></div>
+        </div>
+        <div class="form-group inline-field">
+          <label class="h4">Start Date & Time</label>
+          <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
+          <div class="errors-container">
+            <span class="error-msg" *ngIf="validStartDate">Start Date must be lesser than End Date and Time and greater than current Date and Time</span>
+          </div>
+        </div>
+        <div class="form-group inline-field">
+          <label class="h4">End Date & Time</label>
+          <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.endDate" name="End Date" (mouseup)="isEndDateValid(testSettings.endDate)" />
+          <div class="errors-container">
+            <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater then Start Date and Time</span>
+          </div>
+        </div>
+        <div class="form-group ip-restrictions-field">
+          <label class="h4">IP Restrictions</label>
+          <br />
+          <div>
+            <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testSettings.fromIpAddress" pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+            <br />
+            <div class="errors-container">
+              <span class="error-msg" *ngIf="From.errors && From.dirty" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
             </div>
-            <div class="form-group inline-field">
-                <label class="h4">Start Date & Time</label>
-                <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.startDate" name="Start Date" (mouseup)="isStartDateValid()" />
-                <div class="errors-container">
-                    <span class="error-msg" *ngIf="validStartDate">Start Date must be valid</span>
-                </div>
+          </div>
+          <div>
+            <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testSettings.toIpAddress" #To=ngModel pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
+            <br />
+            <div class="errors-container">
+              <span class="error-msg" *ngIf="To.errors && To.dirty" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
             </div>
-            <div class="form-group inline-field">
-                <label class="h4">End Date & Time</label>
-                <input type="datetime-local" class="form-control small-width" [(ngModel)]="testSettings.endDate" name="End Date" (mouseup)="isEndDateValid(testSettings.endDate)" />
-                <div class="errors-container">
-                    <span class="error-msg" *ngIf="validEndDate">End Date and Time must be greater</span>
-                </div>
-            </div>
-            <div class="form-group ip-restrictions-field">
-                <label class="h4">IP Restrictions</label>
-                <br />
-                <div>
-                    <input type="text" class="form-control small-width" id="From" name="From" placeholder="From IP" #From=ngModel [(ngModel)]="testSettings.fromIpAddress" required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                    <br />
-                    <div class="errors-container">
-                        <span class="error-msg" *ngIf="From.errors && (From.touched || From.pristine || From.untouched)" [hidden]="!From.errors.pattern">Enter IP Address in correct format</span>
-                    </div>
-                </div>
-                <div>
-                    <input type="text" class="form-control small-width" id="To" name="To" placeholder="To IP" [(ngModel)]="testSettings.toIpAddress" #To=ngModel required pattern="^(([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])\.){3}([0-9]|[1-9][0-9]|1[0-9]{2}|2[0-4][0-9]|25[0-5])$" />
-                    <br />
-                    <div class="errors-container">
-                        <span class="error-msg" *ngIf="To.errors && (To.untouched || To.pristine || To.dirty)" [hidden]="!To.errors.pattern">Enter IP Address in valid format</span>
-                    </div>
-                </div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Browser Tolerance</label>
-                <select class="form-control half-width" [(ngModel)]="testSettings.browserTolerance" name="Browser Tolerance">
-                    <option>0</option>
-                    <option>1</option>
-                    <option>2</option>
-                    <option>3</option>
-                </select>
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Question Order</label>
-                <select class="form-control half-width">
-                    <option>Random</option>
-                    <option>Option 1</option>
-                    <option>Option 2</option>
-                    <option>Option 3</option>
-                </select>
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Option Order</label>
-                <select class="form-control half-width">
-                    <option>Fixed</option>
-                    <option>Option 1</option>
-                    <option>Option 2</option>
-                    <option>Option 3</option>
-                </select>
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group inline-field">
-                <label class="h4">Correct Marks</label>
-                <input type="number" class="form-control small-width" [(ngModel)]="testSettings.correctMarks" name="Correct Marks" min="0" />
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group inline-field">
-                <label class="h4">Incorrect Marks</label>
-                <input type="number" class="form-control small-width" [(ngModel)]="testSettings.incorrectMarks" name="Incorrect Marks" min="0" />
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Warning Message</label>
-                <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testSettings.warningMessage" name="Warning Message" maxlength="255"></textarea>
-                <div class="errors-container"></div>
-            </div>
-            <div class="form-group">
-                <label class="h4">Warning Time (mins)</label>
-                <input type="number" class="form-control small-width" placeholder="00" [(ngModel)]="testSettings.warningTime" name="Warning Time" min="0" (click)="isWarningTimeValid()" />
-                <div class="errors-container">
-                    <span class="error-msg" *ngIf="validTime">Warning Time should be less than Time Duration</span>
-                </div>
-            </div>
-            <div class="test-create-footer clearfix">
-                <div class="container">
-                    <ul class="steps pull-left">
-                        <li class="h5"><a [routerLink]="['/tests/sections']">Select Sections</a></li>
-                        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
-                        <li class="h5"><a [routerLink]="['/tests/questions']">Select Questions</a></li>
-                        <li class="h5"><em class="material-icons">keyboard_arrow_right</em></li>
-                        <li class="h5 active"><a [routerLink]="['/tests/settings']">Settings & Schedule</a></li>
-                    </ul>
-                    <div class="buttons-block pull-right">
-                        <button type="button" class="btn" [routerLink]="['/tests']" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" (click)="launchTestDialog(testSettings.id,testSettings)">Save & Exit</button>
-                        <button type="submit" [disabled]="To.invalid || From.invalid || validEndDate || validTime || validStartDate" class="btn btn-primary" (click)="launchTestDialog(testSettings.id,testSettings)">Save & Share</button>
-                    </div>
-                </div>
-            </div>
-        </form>
+          </div>
+        </div>
+        <div class="form-group">
+          <label class="h4">Browser Tolerance</label>
+          <select class="form-control half-width" [(ngModel)]="testSettings.browserTolerance" name="Browser Tolerance">
+            <option>0</option>
+            <option>1</option>
+            <option>2</option>
+            <option>3</option>
+          </select>
+          <div class="errors-container"></div>
+        </div>
+        <div class="form-group">
+          <label class="h4">Question Order</label>
+          <select class="form-control half-width">
+            <option>Fixed</option>
+            <option>Random</option>
+          </select>
+          <div class="errors-container"></div>
+        </div>
+        <div class="form-group">
+          <label class="h4">Option Order</label>
+          <select class="form-control half-width">
+            <option>Fixed</option>
+            <option>Random</option>
+          </select>
+          <div class="errors-container"></div>
+        </div>
+        <div class="form-group inline-field">
+          <label class="h4">Correct Marks</label>
+          <input type="number" class="form-control small-width" [(ngModel)]="testSettings.correctMarks" name="Correct Marks" min="0" />
+          <div class="errors-container"></div>
+        </div>
+        <div class="form-group inline-field">
+          <label class="h4">Incorrect Marks</label>
+          <input type="number" class="form-control small-width" [(ngModel)]="testSettings.incorrectMarks" name="Incorrect Marks" min="0" />
+          <div class="errors-container"></div>
+        </div>
+        <div class="form-group">
+          <label class="h4">Warning Message</label>
+          <textarea class="form-control half-width" rows="3" #textarea placeholder="Your message here" [(ngModel)]="testSettings.warningMessage" name="Warning Message" maxlength="255"></textarea>
+          <div class="errors-container"></div>
+        </div>
+        <div class="form-group">
+          <label class="h4">Warning Time (mins)</label>
+          <input type="number" class="form-control small-width" placeholder="00" [(ngModel)]="testSettings.warningTime" name="Warning Time" min="0"  (mouseup)="isWarningTimeValid()"/>
+          <div class="errors-container">
+            <span class="error-msg" *ngIf="validTime">Warning Time should be less than Time Duration</span>
+          </div>
+        </div>
+        <create-test-footer [settingsForm]="settingsForm" [validStartDate]="validStartDate" [validEndDate]="validEndDate" [validTime]="validTime"></create-test-footer>
+      </div>
     </div>
+  </form>
 </div>
