Created classes for display and font variable.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/conduct/test/test.html
@@ -1,15 +1,15 @@
 ﻿<div class="test">
     <div class="test-header">
         <div class="container-fluid">
-            <div>
-                <div>
+            <div class="display-table">
+                <div class="display-table-cell">
                     <img class="promact-logo" src="/images/promact-logo.png" alt="Promact Logo" width="180" />
                 </div>
-                <div class="text-center">
+                <div class="display-table-cell text-center">
                     <h2 class="mb5">BBIT 10-08-2017</h2>
                     <p class="mb0">John Doe</p>
                 </div>
-                <div class="text-right">
+                <div class="display-table-cell text-right">
                     <button type="button" class="btn btn-primary">End Test</button>
                     <br class="hidden-lg" />
                     <h5 class="mlr10">Time Remaining:</h5>
@@ -21,11 +21,11 @@
     <div class="test-body">
         <div class="test-body-title">
             <div class="container-fluid">
-                <div>
-                    <div class="ptb10">
+                <div class="display-table">
+                    <div class="display-table-cell ptb10">
                         <h6>Question #3</h6>
                     </div>
-                    <div class="ptb10 pl15">
+                    <div class="display-table-cell ptb10 pl15">
                         <h6>Select the answer(s)</h6>
                     </div>
                 </div>
@@ -33,11 +33,11 @@
         </div>
         <div class="test-body-content">
             <div class="container-fluid">
-                <div>
-                    <div class="qs-area ptb20">
+                <div class="display-table">
+                    <div class="display-table-cell qs-area ptb20">
                         <p>Which type of C++ object can have its elements changed, added, or removed?</p>
                     </div>
-                    <div class="ans-area ptb20 pl15">
+                    <div class="display-table-cell ans-area ptb20 pl15">
                         <md-radio-group>
                             <md-radio-button value="option1">String</md-radio-button>
                             <md-radio-button value="option2">Mutable</md-radio-button>
