removed getCategoryById method

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -57,7 +57,7 @@
                                 </div>
                             </div>
                             <div class="mt10">
-                                <p class="tags">{{getCategoryById(question.category.id).categoryName}}</p>
+                                <p class="tags">{{question.category.categoryName}}</p>
                                 <p class="tags">{{DifficultyLevel[question.difficultyLevel]}}</p>
                             </div>
                         </div>
