--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-sections/test-sections.html
@@ -1,6 +1,11 @@
 ﻿<div class="test-create-steps test-sections">
-    <create-test-header></create-test-header>
-        <div class="container">          
+    <div class="header-block">
+        <div class="container">
+            <h1>
+                <span [hidden]="editName">{{test.testName}}</span>
+                <input type="text" class="form-control" [hidden]="!editName" />
+                <em class="material-icons" (click)="editName = !editName">edit</em>
+            </h1>
         </div>
     </div>
     <div class="container">
@@ -32,5 +37,5 @@
                 <button type="button" class="btn btn-primary" (click)="SaveNext()">Save & Next</button>
             </div>
         </div>
-        <create-test-footer></create-test-footer>
     </div>
+</div>
