--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-programming/questions-programming.html
@@ -156,7 +156,7 @@
             </div>
             <div class="actions-area">
                 <button type="button" class="btn" [routerLink]="['/questions']">Cancel</button>
-                <button type="submit" class="btn btn-primary" [disabled]="!codeSnippetForm.valid || nolanguageSelected || !testCases.length > 0">Save</button>
+                <button type="submit" class="btn btn-primary" [disabled]="!codeSnippetForm.valid || nolanguageSelected > 0">Save</button>
             </div>
         </form>
     </div>
