method name changed : IsCategoryNameExistsAsync() to  IsCategoryExistAsync and rename changed to update
dddddd

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/questions/questions-dashboard/questions-dashboard.html
@@ -19,7 +19,7 @@
                         <span title="{{category.categoryName}}" (click)="categoryWiseFilter(category)">{{category.categoryName}}</span>
                         <em class="material-icons pull-right" [mdMenuTriggerFor]="categoryMenu">more_vert</em>
                         <md-menu #categoryMenu="mdMenu" [overlapTrigger]="false" x-position="before">
-                            <button md-menu-item (click)="renameCategoryDialog(category)">Rename</button>
+                            <button md-menu-item (click)="updateCategoryDialog(category)">Update</button>
                             <button md-menu-item (click)="deleteCategoryDialog(category)">Delete</button>
                         </md-menu>
                     </li>
