changed isAttendeeExist to isTestAteendeeExist, changed delete validation message

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/delete-test-dialog.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/tests-dashboard/delete-test-dialog.html
@@ -23,7 +23,7 @@
             <button type="button" class="pull-right" md-dialog-close><em class="material-icons">close</em></button>
         </div>
         <md-dialog-content>
-            <h4 class="mb20">The selected test can not be deleted</h4>
+            <h4 class="mb20">The candidate(s) have taken the test hence it cannot be deleted.</h4>
         </md-dialog-content>
         <md-dialog-actions>
             <button type="button" class="btn" md-dialog-close>Cancel</button>
