--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-view/test-view.html
@@ -1,5 +1,5 @@
 ﻿<div class="test-create-steps test-view">
-    <div class="header-block clearfix">
+    <div class="test-create-header clearfix">
         <div class="container">
             <h1 class="pull-left">
                 <span>BBIT 10-08-2017</span>
