Revert "Designed View Test Report page."
This reverts commit 00877a52bc3b62f4c25925e8d2ed21f5c9b1efea.

--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/tests/test-questions/test-questions.html
@@ -15,12 +15,12 @@
         </md2-accordion-header>
         <div class="collapsible-body p0">
           <div class="select-all">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <h5>Select All</h5>
             <span class="h7">(total 15 questions)</span>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.1</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -35,7 +35,7 @@
             </div>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.2</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -50,7 +50,7 @@
             </div>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.3</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -78,12 +78,12 @@
         </md2-accordion-header>
         <div class="collapsible-body p0">
           <div class="select-all">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <h5>Select All</h5>
             <span class="h7">(total 15 questions)</span>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.1</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -98,7 +98,7 @@
             </div>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.2</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -113,7 +113,7 @@
             </div>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.3</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -141,12 +141,12 @@
         </md2-accordion-header>
         <div class="collapsible-body p0">
           <div class="select-all">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <h5>Select All</h5>
             <span class="h7">(total 15 questions)</span>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.1</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -161,7 +161,7 @@
             </div>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.2</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
@@ -176,7 +176,7 @@
             </div>
           </div>
           <div class="qs-container">
-            <md-checkbox class="only-checkbox mr10"></md-checkbox>
+            <md-checkbox></md-checkbox>
             <p class="qs-num">Q.3</p>
             <div class="qs-text">
               <p class="question">What is Git?</p>
