--- a/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
+++ b/Trappist/src/Promact.Trappist.Web/wwwroot/app/reports/test-report/test-report.html
@@ -5,7 +5,7 @@
                 <span>BBIT 10-08-2017</span>
             </h1>
             <div class="search-area pull-right">
-                <input type="text" [hidden]="!showSearchInput" [(ngModel)]="searchTest" />
+                <input type="text" [hidden]="!showSearchInput" />
                 <button type="button" (click)="showSearchInput = !showSearchInput"><i class="material-icons">search</i></button>
             </div>
         </div>
